fennec 62.0.1 - added ship graphid.

--- a/inflight/fennec/fennec-release-62.0.1.json
+++ b/inflight/fennec/fennec-release-62.0.1.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "Xd5JfmopTc6eAM4BPVnNBg"
+                ],
+                [
+                    "ship",
+                    "ZHAVsWzFS1WjiJ70V-8RZg"
                 ]
             ],
             "human_tasks": [
