firefox 62.0.2 - added push graphid.

--- a/inflight/firefox/firefox-release-62.0.2.json
+++ b/inflight/firefox/firefox-release-62.0.2.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "VeIaLQ_LQJmxuTRtikRIrg"
+                ],
+                [
+                    "push",
+                    "V3sSi4iWS3uwRKlgTRMAgA"
                 ]
             ],
             "human_tasks": [
