--- a/inflight/firefox/firefox-release-62.0.2.json
+++ b/inflight/firefox/firefox-release-62.0.2.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "H8H7qFMZTb26ryr3f5K8lA"
+                ],
+                [
+                    "ship",
+                    "CiTF0tZhR-aoUjV6xiXQqQ"
                 ]
             ],
             "human_tasks": [
