fennec 62.0.2 - added promote graphid.

--- a/inflight/fennec/fennec-release-62.0.2.json
+++ b/inflight/fennec/fennec-release-62.0.2.json
@@ -7,7 +7,7 @@
             "graphids": [
                 [
                     "promote",
-                    "VeIaLQ_LQJmxuTRtikRIrg"
+                    "Ce1YswzfShKpUJ9EVU6J5Q"
                 ]
             ],
             "human_tasks": [
