--- a/inflight/firefox/firefox-release-62.0.3.json
+++ b/inflight/firefox/firefox-release-62.0.3.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "Iel3zFH9Sc64pTH2zqgEog"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
