fennec 62.0.3 - added promote graphid.

--- a/inflight/fennec/fennec-release-62.0.3.json
+++ b/inflight/fennec/fennec-release-62.0.3.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "avZzuSekSWKOoi8-6c1yfg"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
