firefox 62.0.3 - updated inflight issue.

--- a/inflight/firefox/firefox-release-62.0.3.json
+++ b/inflight/firefox/firefox-release-62.0.3.json
@@ -42,7 +42,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "mac partner repack failed on downloading a toolchain",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "asasaki"
+                }
+            ]
         }
     ],
     "preflight": {
