firefox 62.0.3 - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-62.0.3.json
+++ b/inflight/firefox/firefox-release-62.0.3.json
@@ -46,8 +46,8 @@
                 {
                     "bug": "none",
                     "description": "mac partner repack failed on downloading a toolchain",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
