firefox 62.0.3 - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-62.0.3.json
+++ b/inflight/firefox/firefox-release-62.0.3.json
@@ -46,7 +46,7 @@
                 {
                     "bug": "none",
                     "description": "mac partner repack failed on downloading a toolchain",
-                    "future_threat": false,
+                    "future_threat": true,
                     "resolved": true,
                     "who": "asasaki"
                 },
