firefox 62.0.3 - updated inflight issue.

--- a/inflight/firefox/firefox-release-62.0.3.json
+++ b/inflight/firefox/firefox-release-62.0.3.json
@@ -60,6 +60,13 @@
                     "future_threat": true,
                     "resolved": false,
                     "who": "jlorenzo"
+                },
+                {
+                    "bug": "none",
+                    "description": "new partner repacks failed signing -- expected",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "asasaki"
                 }
             ]
         }
