firefox 62.0.3 - updated inflight issue. Resolved ('3',)

--- a/inflight/firefox/firefox-release-62.0.3.json
+++ b/inflight/firefox/firefox-release-62.0.3.json
@@ -65,7 +65,7 @@
                     "bug": "none",
                     "description": "new partner repacks failed signing -- expected",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
