firefox 62.0.3 - added ship graphid.

--- a/inflight/firefox/firefox-release-62.0.3.json
+++ b/inflight/firefox/firefox-release-62.0.3.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "fXjUYLkoTkKZb_Uv4N2mKQ"
+                ],
+                [
+                    "ship",
+                    "QaL2b6JPTta4oPCIQBnBNQ"
                 ]
             ],
             "human_tasks": [
