fennec 62.0.3 - added ship graphid.

--- a/inflight/fennec/fennec-release-62.0.3.json
+++ b/inflight/fennec/fennec-release-62.0.3.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "avZzuSekSWKOoi8-6c1yfg"
+                ],
+                [
+                    "ship",
+                    "JViZHyDiQF2a7CgXvCaPfA"
                 ]
             ],
             "human_tasks": [
