thunderbird 60.2.1 - updated inflight issue.

--- a/inflight/thunderbird/thunderbird-release-60.2.1.json
+++ b/inflight/thunderbird/thunderbird-release-60.2.1.json
@@ -42,7 +42,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "thunderbird rw docs point at esr52 docs",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "asasaki"
+                }
+            ]
         }
     ],
     "preflight": {
