thunderbird 60.2.1 - added push graphid.

--- a/inflight/thunderbird/thunderbird-release-60.2.1.json
+++ b/inflight/thunderbird/thunderbird-release-60.2.1.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "BSAMEmNqSfyrdSwtyEkAmA"
+                ],
+                [
+                    "push",
+                    "VDHRBAB6RpOc-zz7hn7SOg"
                 ]
             ],
             "human_tasks": [
