thunderbird 60.2.1 - updated inflight issue. Resolved ('1',)

--- a/inflight/thunderbird/thunderbird-release-60.2.1.json
+++ b/inflight/thunderbird/thunderbird-release-60.2.1.json
@@ -50,8 +50,8 @@
                 {
                     "bug": "none",
                     "description": "thunderbird rw docs point at esr52 docs",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
