thunderbird 60.2.1 - added ship graphid.

--- a/inflight/thunderbird/thunderbird-release-60.2.1.json
+++ b/inflight/thunderbird/thunderbird-release-60.2.1.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "VDHRBAB6RpOc-zz7hn7SOg"
+                ],
+                [
+                    "ship",
+                    "OgKdgtXWRLKlbk9H1ol-3Q"
                 ]
             ],
             "human_tasks": [
