--- a/upcoming/firefox/firefox-release-62.0.4.json
+++ b/upcoming/firefox/firefox-release-62.0.4.json
@@ -41,7 +41,14 @@
         }
     ],
     "preflight": {
-        "human_tasks": []
+        "human_tasks": [
+            {
+                "bug": "1495844",
+                "deadline": "2018-10-23",
+                "description": "We will need to update the firefox-election-edition bouncer URLs manually after shipping.",
+                "resolved": false
+            }
+        ]
     },
     "product": "firefox",
     "version": "62.0.4"
