firefox 62.0.3 - updated inflight issue. Resolved ('2',)

--- a/inflight/firefox/firefox-release-62.0.3.json
+++ b/inflight/firefox/firefox-release-62.0.3.json
@@ -62,7 +62,7 @@
                     "bug": "1495714",
                     "description": "502 error, corrupted release blob: \"Caught non-fatal exception finding fileUrl for partial update\"",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlorenzo"
                 },
                 {
