firefox 63.0rc - updated inflight issue.

--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -62,6 +62,13 @@
                     "future_threat": true,
                     "resolved": false,
                     "who": "asasaki"
+                },
+                {
+                    "bug": "none",
+                    "description": "missing shipit-dev scope; the mark-as-started task should point at production for esr and release",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "asasaki"
                 }
             ]
         }
