--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote_rc",
+                    "Xei1zndyT_Ov6arEk1doTw"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
