firefox 63.0rc - updated inflight issue. Resolved ('3',)

--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -79,7 +79,7 @@
                     "bug": "none",
                     "description": "cron-check-bouncer is running in the release graph, including devedition",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
