--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -86,7 +86,7 @@
                     "bug": "none",
                     "description": "linux64 l10n lij upload issue? script exited fine, task failed, missing a tarball",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
