firefox 63.0rc - updated inflight issue. Resolved ('5',)

--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -93,7 +93,7 @@
                     "bug": "none",
                     "description": "hg clone issue again",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
