firefox 63.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "Xei1zndyT_Ov6arEk1doTw"
+                ],
+                [
+                    "ship_rc",
+                    "H0h2Wk2LQI2KonEHY2HcSg"
                 ]
             ],
             "human_tasks": [
