--- a/inflight/fennec/fennec-release-rc-63.0rc.json
+++ b/inflight/fennec/fennec-release-rc-63.0rc.json
@@ -21,7 +21,7 @@
                     "alias": "ship-rc",
                     "description": "run ship-rc",
                     "docs": "https://github.com/mozilla-releng/releasewarrior-2.0/blob/master/docs/release-promotion/mobile/howto-rc.md#ship-rc",
-                    "resolved": false
+                    "resolved": true
                 },
                 {
                     "alias": "ship",
