fennec 63.0rc - added ship_rc graphid.

--- a/inflight/fennec/fennec-release-rc-63.0rc.json
+++ b/inflight/fennec/fennec-release-rc-63.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "JJWvQkRgT_Cwm08w2mU7Tg"
+                ],
+                [
+                    "ship_rc",
+                    "aglKcwd1Sg-X8DRhlTeMQA"
                 ]
             ],
             "human_tasks": [
