firefox 63.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -64,8 +64,8 @@
                 {
                     "bug": "none",
                     "description": "release-mark-as-started bustage; known; fix landing",
-                    "future_threat": true,
-                    "resolved": false,
+                    "future_threat": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
