firefox 63.0rc - updated inflight issue. Resolved ('2',)

--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -72,7 +72,7 @@
                     "bug": "none",
                     "description": "hg issue for UpSVfWizQsCldgTfs_w-jQ",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "asasaki"
                 }
             ]
