--- a/inflight/fennec/fennec-release-rc-63.0rc.json
+++ b/inflight/fennec/fennec-release-rc-63.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "Aygmv766TPWuWQoZcxpOnA"
+                ],
+                [
+                    "ship_rc",
+                    "X6ybGTskSiCAv5dJS512Uw"
                 ]
             ],
             "human_tasks": [
