firefox 63.0rc - added ship_rc graphid.

--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -8,6 +8,10 @@
                 [
                     "promote_rc",
                     "SObDu5XHQTGgFHTOz4IuXQ"
+                ],
+                [
+                    "ship_rc",
+                    "K8ZgBTa4QG2dBvLqS4tuww"
                 ]
             ],
             "human_tasks": [
