firefox 63.0rc - updated inflight issue.

--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -82,6 +82,13 @@
                     "future_threat": true,
                     "resolved": true,
                     "who": "asasaki"
+                },
+                {
+                    "bug": "1501141",
+                    "description": "final verify not actually testing anything, then just testing mac",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "nthomas"
                 }
             ]
         },
