firefox 63.0rc - added ship graphid.

--- a/inflight/firefox/firefox-release-rc-63.0rc.json
+++ b/inflight/firefox/firefox-release-rc-63.0rc.json
@@ -16,6 +16,10 @@
                 [
                     "push",
                     "bgHpPUB2QZ2BcLZd7W5Zlw"
+                ],
+                [
+                    "ship",
+                    "ftxWHWbtQEmPMUtr0vlKlw"
                 ]
             ],
             "human_tasks": [
