fennec 63.0rc - added ship graphid.

--- a/inflight/fennec/fennec-release-rc-63.0rc.json
+++ b/inflight/fennec/fennec-release-rc-63.0rc.json
@@ -12,6 +12,10 @@
                 [
                     "ship_rc",
                     "X6ybGTskSiCAv5dJS512Uw"
+                ],
+                [
+                    "ship",
+                    "aUFuHBj0QZeHB8jFxwSymA"
                 ]
             ],
             "human_tasks": [
