fennec 63.0rc - updated inflight issue. Resolved ('1',)

--- a/inflight/fennec/fennec-release-rc-63.0rc.json
+++ b/inflight/fennec/fennec-release-rc-63.0rc.json
@@ -43,7 +43,7 @@
                     "bug": "1500897",
                     "description": "I cancelled beetmover-geckoview tasks because they must only be released off a dedicated RELBRANCH",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlorenzo"
                 }
             ]
