--- a/inflight/firefox/firefox-release-63.0.1.json
+++ b/inflight/firefox/firefox-release-63.0.1.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 4,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "eAQCnoHFQtKgrtaNXSZTYA"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
