firefox 63.0.1 - updated inflight issue. Resolved ('2',)

--- a/inflight/firefox/firefox-release-63.0.1.json
+++ b/inflight/firefox/firefox-release-63.0.1.json
@@ -61,7 +61,7 @@
                     "bug": "none",
                     "description": "hg clone issue getting clonebundle from s3 (N4FUF0XYSD6NF88NetNxug)",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "callek"
                 }
             ]
