firefox 63.0.1 - updated inflight issue.

--- a/inflight/firefox/firefox-release-63.0.1.json
+++ b/inflight/firefox/firefox-release-63.0.1.json
@@ -63,6 +63,13 @@
                     "future_threat": true,
                     "resolved": true,
                     "who": "callek"
+                },
+                {
+                    "bug": "none",
+                    "description": "using 'release wnp_blob' for 63.0.1 build 4 was finding build 3 and erroring because of lack of locale lists",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "callek"
                 }
             ]
         },
