firefox 63.0.1 - updated inflight issue. Resolved ('4',)

--- a/inflight/firefox/firefox-release-63.0.1.json
+++ b/inflight/firefox/firefox-release-63.0.1.json
@@ -75,7 +75,7 @@
                     "bug": "1495714",
                     "description": "Release Blob gets corrupted when manually updated",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "callek"
                 }
             ]
