thunderbird 60.3.0 - added promote graphid.

--- a/inflight/thunderbird/thunderbird-release-60.3.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.0.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 2,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "f7FzjhA9TlCwrtaXCPgNqw"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
