thunderbird 60.3.0 - added push graphid.

--- a/inflight/thunderbird/thunderbird-release-60.3.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.0.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "f7FzjhA9TlCwrtaXCPgNqw"
+                ],
+                [
+                    "push",
+                    "PTV4SsQoQOywZhAH4cKcxA"
                 ]
             ],
             "human_tasks": [
