thunderbird 60.3.0 - updated inflight issue.

--- a/inflight/thunderbird/thunderbird-release-60.3.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.0.json
@@ -46,7 +46,15 @@
                     "resolved": true
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "version bump failed due to hg.m.o cert misconfig",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlund"
+                }
+            ]
         },
         {
             "aborted": true,
