thunderbird 60.3.0 - updated inflight issue.

--- a/inflight/thunderbird/thunderbird-release-60.3.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.0.json
@@ -53,6 +53,13 @@
                     "future_threat": true,
                     "resolved": false,
                     "who": "jlund"
+                },
+                {
+                    "bug": "none",
+                    "description": "rw tracking docs used old buildbot docs. perhaps when created, rw repo was stale?",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "jlund"
                 }
             ]
         },
