thunderbird 60.3.0 - updated inflight issue. Resolved ('1',)

--- a/inflight/thunderbird/thunderbird-release-60.3.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.0.json
@@ -51,7 +51,7 @@
                     "bug": "none",
                     "description": "version bump failed due to hg.m.o cert misconfig",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlund"
                 },
                 {
