thunderbird 60.3.0 - updated inflight issue. Resolved ('2',)

--- a/inflight/thunderbird/thunderbird-release-60.3.0.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.0.json
@@ -58,7 +58,7 @@
                     "bug": "none",
                     "description": "rw tracking docs used old buildbot docs. perhaps when created, rw repo was stale?",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "jlund"
                 }
             ]
