firefox 63.0.1 - added ship graphid.

--- a/inflight/firefox/firefox-release-63.0.1.json
+++ b/inflight/firefox/firefox-release-63.0.1.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "aOb4yk0fTiC3insIp7LaGA"
+                ],
+                [
+                    "ship",
+                    "Ks9Gohi0TrG-K18VG0eqNg"
                 ]
             ],
             "human_tasks": [
