--- a/inflight/firefox/firefox-release-63.0.1.json
+++ b/inflight/firefox/firefox-release-63.0.1.json
@@ -53,7 +53,7 @@
                     "alias": "",
                     "description": "bump the firefox-election-edition bouncer entries when 63.0.1 ships",
                     "docs": "",
-                    "resolved": false
+                    "resolved": true
                 }
             ],
             "issues": [
