fennec 63.0.2 - added ship graphid.

--- a/inflight/fennec/fennec-release-63.0.2.json
+++ b/inflight/fennec/fennec-release-63.0.2.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "BrNo-0WiR2eNfBXhhl3wog"
+                ],
+                [
+                    "ship",
+                    "fzkRkMt9SpOBW3yxqZK-aw"
                 ]
             ],
             "human_tasks": [
