fennec 63.0.2 - updated inflight issue.

--- a/inflight/fennec/fennec-release-63.0.2.json
+++ b/inflight/fennec/fennec-release-63.0.2.json
@@ -28,7 +28,15 @@
                     "resolved": true
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "Beetmover tasks failed relating to geckoview",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "callek"
+                }
+            ]
         }
     ],
     "preflight": {
