--- a/inflight/fennec/fennec-release-63.0.2.json
+++ b/inflight/fennec/fennec-release-63.0.2.json
@@ -30,7 +30,7 @@
             ],
             "issues": [
                 {
-                    "bug": "none",
+                    "bug": "1505514",
                     "description": "Beetmover tasks failed relating to geckoview",
                     "future_threat": true,
                     "resolved": false,
