--- a/inflight/fennec/fennec-release-63.0.2.json
+++ b/inflight/fennec/fennec-release-63.0.2.json
@@ -33,7 +33,7 @@
                     "bug": "1505514",
                     "description": "Beetmover tasks failed relating to geckoview",
                     "future_threat": true,
-                    "resolved": false,
+                    "resolved": true,
                     "who": "callek"
                 }
             ]
