thunderbird 60.3.1 - added promote graphid.

--- a/inflight/thunderbird/thunderbird-release-60.3.1.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.1.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "MuXduwVrRPS1z31cdpT3ig"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
