--- a/inflight/thunderbird/thunderbird-release-60.3.1.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.1.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "Kg0yGmtxRRSdGJZ5bdYbSg"
+                ],
+                [
+                    "push",
+                    "N5SiKUOsSt2kKn_IgQD2OA"
                 ]
             ],
             "human_tasks": [
