firefox 63.0.3 - added promote graphid.

--- a/inflight/firefox/firefox-release-63.0.3.json
+++ b/inflight/firefox/firefox-release-63.0.3.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "T_T6tbxBSYGIuZUu4dsc7A"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
