firefox 63.0.3 - updated inflight issue.

--- a/inflight/firefox/firefox-release-63.0.3.json
+++ b/inflight/firefox/firefox-release-63.0.3.json
@@ -48,7 +48,15 @@
                     "resolved": false
                 }
             ],
-            "issues": []
+            "issues": [
+                {
+                    "bug": "none",
+                    "description": "hg clone error in NlTnz9hfRm-0nw6nXH2uNw (mac EME-free repackage)",
+                    "future_threat": true,
+                    "resolved": false,
+                    "who": "nthomas"
+                }
+            ]
         }
     ],
     "preflight": {
