thunderbird 60.3.1 - added ship graphid.

--- a/inflight/thunderbird/thunderbird-release-60.3.1.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.1.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "N5SiKUOsSt2kKn_IgQD2OA"
+                ],
+                [
+                    "ship",
+                    "ZGlcJKIEQ0CrTkfB-E9CEQ"
                 ]
             ],
             "human_tasks": [
