firefox 63.0.3 - added ship graphid.

--- a/inflight/firefox/firefox-release-63.0.3.json
+++ b/inflight/firefox/firefox-release-63.0.3.json
@@ -12,6 +12,10 @@
                 [
                     "push",
                     "NZF0P14CRziO4gby6xrhRQ"
+                ],
+                [
+                    "ship",
+                    "ChrbdLIZSuiiaN4ddrOIbA"
                 ]
             ],
             "human_tasks": [
