thunderbird 60.3.2 - added promote graphid.

--- a/inflight/thunderbird/thunderbird-release-60.3.2.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.2.json
@@ -4,7 +4,12 @@
         {
             "aborted": false,
             "buildnum": 1,
-            "graphids": [],
+            "graphids": [
+                [
+                    "promote",
+                    "Ub0-v1CxTb2Yps6Yb1v5Sg"
+                ]
+            ],
             "human_tasks": [
                 {
                     "alias": "shipit",
