--- a/inflight/thunderbird/thunderbird-release-60.3.2.json
+++ b/inflight/thunderbird/thunderbird-release-60.3.2.json
@@ -8,6 +8,10 @@
                 [
                     "promote",
                     "Ub0-v1CxTb2Yps6Yb1v5Sg"
+                ],
+                [
+                    "push",
+                    "BkL-ovevRRmxmFk-sTv5jA"
                 ]
             ],
             "human_tasks": [
